Read vars from tezos
